--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "cookies": "^0.8.0",
     "next": "12.0.9",
     "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.26.0",
-    "swr": "^1.2.0"
+    "swr": "^1.2.1"
   },
   "devDependencies": {
     "eslint": "8.8.0",
