--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-hook-form": "^7.26.0",
     "swr": "^1.2.1"
   },
