--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-hook-form": "^7.26.0",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "swr": "^1.2.1"
   },
   "devDependencies": {
