--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-elastic-carousel": "^0.11.5",
     "react-hook-form": "^7.26.0",
     "react-slick": "^0.28.1",
+    "react-toastify": "^8.2.0",
     "slick-carousel": "^1.8.1",
     "swr": "^1.2.1"
   },
