--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
     "cookies": "^0.8.0",
     "next": "12.0.9",
     "nookies": "^2.5.2",
