--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookies": "^0.8.0",
     "next": "12.0.9",
     "nookies": "^2.5.2",
+    "razorpay": "^2.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-elastic-carousel": "^0.11.5",
@@ -21,6 +22,7 @@
     "react-slick": "^0.28.1",
     "react-to-print": "^2.14.6",
     "react-toastify": "^8.2.0",
+    "shortid": "^2.2.16",
     "slick-carousel": "^1.8.1",
     "swr": "^1.2.1"
   },
